# reclaw-cli

./: Cargo.toml  README.md
docs/spec/: commands.md
src/: client.rs  command.rs  lib.rs  main.rs
