[package]
name = "reclaw-cli"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Operational CLI for Reclaw Core/OpenClaw-compatible runtimes"
repository = "https://github.com/aint-no-code/reclaw-cli"

[dependencies]
clap = { version = "4.5.53", features = ["derive"] }
reqwest = { version = "0.12.24", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2.0.18"
